Switch back to Java 8